--- a/src/Plugins/Shipping.ByTotal/Views/ShippingByTotal/Configure.cshtml
+++ b/src/Plugins/Shipping.ByTotal/Views/ShippingByTotal/Configure.cshtml
@@ -278,7 +278,6 @@
     }
    
     <br />
-    <br />
     
     <fieldset>
         <legend><span>@T("Plugins.Shipping.ByTotal.SettingsTitle")</span></legend>
@@ -311,8 +310,10 @@
                 </td>
             </tr>
             <tr>
-				<td>&nbsp;</td>
-				<td style="padding:10px 0">
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
                     <button type="button" id="savegeneralsettings" class="btn btn-primary">
                         <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
                     </button>
