--- a/src/Plugins/Shipping.ByWeight/Views/ShippingByWeight/Configure.cshtml
+++ b/src/Plugins/Shipping.ByWeight/Views/ShippingByWeight/Configure.cshtml
@@ -148,8 +148,10 @@
             </td>
         </tr>
         <tr>
-            <td>&nbsp;</td>
-            <td style="padding:10px 0">
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
                 <button type="submit" name="addshippingbyweightrecord" value="addshippingbyweightrecord" class="btn btn-primary">
                     <i class="icon-plus"></i>
                     @T("Common.AddNew")
@@ -181,8 +183,10 @@
             </td>
         </tr>
         <tr>
-            <td>&nbsp;</td>
-            <td style="padding:10px 0">
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
                 <button type="submit" name="savegeneralsettings" value="savegeneralsettings" class="btn btn-primary">
                     <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
                 </button>
