--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1296,14 +1296,16 @@ table.order-edit td {
     text-decoration: none;
 }
 
-#product-edit h3 {
+#product-edit h3,
+.caption-container h3 {
     font-family: 'Segoe UI SemiBold', 'Segoe UI', sans-serif;
     font-weight: 600;
     font-size: 18px;
     line-height: 36px;
     color: #333;
 }
-#product-edit h3.bordered {
+#product-edit h3.bordered,
+.caption-container h3.bordered {
     border: 0;
     border-bottom: 1px solid #e5e5e5;
 }
