--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/_ReportBestCustomersByOrderTotal.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/_ReportBestCustomersByOrderTotal.cshtml
@@ -46,7 +46,10 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
+            <td class="adminTitle">
+                &nbsp;
+            </td>
+            <td class="adminData">
                 <button type="submit" id="search-best-customers-ordertotal" class="btn"><i class="icon-list"></i>&nbsp;@T("Admin.Customers.Reports.RunReport")</button>
             </td>
         </tr>
