--- a/src/Presentation/SmartStore.Web/Administration/Views/EmailAccount/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/EmailAccount/_CreateOrUpdate.cshtml
@@ -102,7 +102,9 @@
             <td class="adminTitle">
             </td>
             <td class="adminData">
-                <button type="submit" name="sendtestemail" value="sendtestemail" class="btn">@T("Admin.Configuration.EmailAccounts.SendTestEmail.Button")</button>
+                <button type="submit" name="sendtestemail" value="sendtestemail" class="btn">
+					<i class="icon-envelope"></i>&nbsp;@T("Admin.Configuration.EmailAccounts.SendTestEmail.Button")
+				</button>
             </td>
         </tr>
     }
