--- a/src/Presentation/SmartStore.Web/Administration/Views/QueuedEmail/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/QueuedEmail/List.cshtml
@@ -72,8 +72,9 @@
             </td>
             <td class="adminData">
                 @Html.EditorFor(model => Model.GoDirectlyToNumber)
-                <button type="submit" name="go-to-email-by-number" value="go-to-email-by-number"
-                    class="btn"><i class="icon-arrow-left icon-white"></i>&nbsp;@T("Admin.Common.Go")</button>
+                <button type="submit" name="go-to-email-by-number" value="go-to-email-by-number" class="btn">
+					<i class="icon-play-circle"></i>&nbsp;@T("Admin.Common.Go")
+				</button>
             </td>
         </tr>
         <tr>
