--- a/src/Plugins/DiscountRules.CustomerRoles/Views/DiscountRulesCustomerRoles/Configure.cshtml
+++ b/src/Plugins/DiscountRules.CustomerRoles/Views/DiscountRulesCustomerRoles/Configure.cshtml
@@ -37,7 +37,12 @@
                 @Html.SmartLabelFor(model => model.CustomerRoleId)
             </td>
             <td class="adminData">
-                <div>@Html.DropDownListFor(model => model.CustomerRoleId, Model.AvailableCustomerRoles) <button type="button" name="savecustomerrolesrequirement@(Model.RequirementId)" id="savecustomerrolesrequirement@(Model.RequirementId)" class="btn">@T("Admin.Common.Save")</button></div>
+                <div>
+					@Html.DropDownListFor(model => model.CustomerRoleId, Model.AvailableCustomerRoles)
+					<button type="button" name="savecustomerrolesrequirement@(Model.RequirementId)" id="savecustomerrolesrequirement@(Model.RequirementId)" class="btn">
+						<i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
+					</button>
+				</div>
                 <div id="pnl-save-requirement-result@(Model.RequirementId)" style="display:none;">@T("Admin.Promotions.Discounts.Requirements.Saved")</div>
             </td>
         </tr>
