--- a/src/Plugins/DiscountRules.HadSpentAmount/Views/DiscountRulesHadSpentAmount/Configure.cshtml
+++ b/src/Plugins/DiscountRules.HadSpentAmount/Views/DiscountRulesHadSpentAmount/Configure.cshtml
@@ -91,8 +91,8 @@
             <button type="button" 
                 name="savehadspentamountrequirement@(Model.RequirementId)" 
                 id="savehadspentamountrequirement@(Model.RequirementId)" 
-                class="btn btn-primary">
-                    @T("Admin.Common.Save")
+                class="btn">
+                    <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
             </button>
 		</td>
     </tr>
