--- a/src/Plugins/Payments.DirectDebit/Views/PaymentDirectDebit/Configure.cshtml
+++ b/src/Plugins/Payments.DirectDebit/Views/PaymentDirectDebit/Configure.cshtml
@@ -37,7 +37,7 @@
             <td class="adminTitle">&nbsp;</td>
             <td class="adminData">
                 <button type="submit" name="save" class="btn btn-primary" value="save">
-                    @T("Admin.Common.Save")
+                    <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
                 </button>
             </td>
         </tr>
