--- a/src/Plugins/Payments.Manual/Views/PaymentManual/Configure.cshtml
+++ b/src/Plugins/Payments.Manual/Views/PaymentManual/Configure.cshtml
@@ -35,8 +35,8 @@
         <tr>
             <td class="adminTitle">&nbsp;</td>
             <td class="adminData">
-                <button type="submit" id="save" name="save" class="btn btn-primary" value="save" >
-                    @T("Admin.Common.Save")
+                <button type="submit" id="save" name="save" class="btn btn-primary" value="save">
+                    <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
                 </button>
             </td>
         </tr>
