--- a/src/Plugins/Payments.PayInStore/Views/PaymentPayInStore/Configure.cshtml
+++ b/src/Plugins/Payments.PayInStore/Views/PaymentPayInStore/Configure.cshtml
@@ -34,13 +34,14 @@
             </td>
         </tr>
         <tr>
-            <td>&nbsp;</td>
-            <td style="padding-top:10px">
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
                 <button type="submit" name="save" class="btn btn-primary" value="save">
-                    @T("Admin.Common.Save")
+                    <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
                 </button>
             </td>
         </tr>
-    </table>
-    
+    </table>    
 }
