--- a/src/Plugins/Payments.PayPalDirect/Views/PaymentPayPalDirect/Configure.cshtml
+++ b/src/Plugins/Payments.PayPalDirect/Views/PaymentPayPalDirect/Configure.cshtml
@@ -85,8 +85,10 @@
         </td>
     </tr>
     <tr>
-        <td>&nbsp;</td>
-        <td style="padding-top:10px;">
+		<td class="adminTitle">
+			&nbsp;
+		</td>
+		<td class="adminData">
             <button type="submit" name="save" class="btn btn-primary" value="save">
                 <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
             </button>
