--- a/src/Plugins/Payments.Prepayment/Views/PaymentPrepayment/Configure.cshtml
+++ b/src/Plugins/Payments.Prepayment/Views/PaymentPrepayment/Configure.cshtml
@@ -34,10 +34,12 @@
             </td>
         </tr>
         <tr>
-            <td class="adminTitle">&nbsp;</td>
-            <td class="adminData">
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
                 <button type="submit" name="save" class="btn btn-primary" value="save">
-                    @T("Admin.Common.Save")
+                    <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
                 </button>
             </td>
         </tr>
