--- a/src/Plugins/SMS.Clickatell/Views/SmsClickatell/Configure.cshtml
+++ b/src/Plugins/SMS.Clickatell/Views/SmsClickatell/Configure.cshtml
@@ -3,14 +3,15 @@
 }
 @model SmartStore.Plugin.Sms.Clickatell.Models.SmsClickatellModel
 @using SmartStore.Web.Framework;
+
+<div class="alert alert-info">
+	<button class="close" data-dismiss="alert">×</button>
+	@Html.Raw(@T("Plugins.Sms.Clickatell.AdminInstruction"))
+</div>
+
 @using (Html.BeginForm())
 {
     <table class="adminContent">
-        <tr>
-            <td class="adminTitle" colspan="2">
-                @Html.Raw(@T("Plugins.Sms.Clickatell.AdminInstruction"))
-            </td>
-        </tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.Enabled)
@@ -57,23 +58,20 @@
             </td>
         </tr>
         <tr>
-            <td>&nbsp;</td>
-            <td style="padding:10px 0">
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
                 <button type="submit" name="save" value="save" class="btn btn-primary">
-                    @T("Admin.Common.Save")
+					<i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
                 </button>
-            </td>
-        </tr>
-        <tr class="adminSeparator">
-            <td colspan="2">
-                <hr />
             </td>
         </tr>
         <tr>
             <td colspan="2">
-                <p>
-                    <strong>@T("Plugins.Sms.Clickatell.SendTest.Hint")</strong>
-                </p>
+				<div class="caption-container">
+					<h3 class="bordered">@T("Plugins.Sms.Clickatell.SendTest.Hint")</h3>
+				</div>
             </td>
         </tr>
         <tr>
@@ -86,22 +84,22 @@
             </td>
         </tr>
         <tr>
-            <td>&nbsp;</td>
-            <td style="padding:10px 0">
-                <button type="submit" name="test-sms" value="test-sms" class="btn btn-primary">
-                    @T("Plugins.Sms.Clickatell.SendTest")
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
+                <button type="submit" name="test-sms" value="test-sms" class="btn">
+                    <i class="icon-envelope"></i>&nbsp;@T("Plugins.Sms.Clickatell.SendTest")
                 </button>
             </td>
         </tr>
-        @if (!String.IsNullOrEmpty(Model.TestSmsResult))
-        {
-            <tr>
-                <td colspan="2" style="color: red">
-                    @Model.TestSmsResult
-                </td>
-            </tr>
-        }
     </table>
     
-    
+    if (!String.IsNullOrEmpty(Model.TestSmsResult))
+    {
+		<div class="alert alert-info">
+			<button class="close" data-dismiss="alert">×</button>
+			@Model.TestSmsResult
+        </div>
+    }
 }
