--- a/src/Plugins/Tax.CountryStateZip/Views/TaxCountryStateZip/Configure.cshtml
+++ b/src/Plugins/Tax.CountryStateZip/Views/TaxCountryStateZip/Configure.cshtml
@@ -68,62 +68,65 @@
 </script>
 @using (Html.BeginForm())
 {
-    <table class="adminContent">
-<tr>
-    <td class="adminTitle" colspan="2">
-        <b>@T("Plugins.Tax.CountryStateZip.AddRecord.Hint")</b>
-    </td>
-</tr>
-<tr>
-    <td class="adminTitle">
-        @Html.SmartLabelFor(model => model.AddCountryId)
-    </td>
-    <td class="adminData">
-        @Html.DropDownListFor(model => model.AddCountryId, Model.AvailableCountries)
-        @Html.ValidationMessageFor(model => model.AddCountryId)
-    </td>
-</tr>
-<tr>
-    <td class="adminTitle">
-    @Html.SmartLabelFor(model => model.AddStateProvinceId)
-    </td>
-    <td class="adminData">
-    @Html.DropDownListFor(model => model.AddStateProvinceId, Model.AvailableStates)
-    @Html.ValidationMessageFor(model => model.AddStateProvinceId)
-    </td>
-</tr>
-<tr>
-    <td class="adminTitle">
-        @Html.SmartLabelFor(model => model.AddZip)
-    </td>
-    <td class="adminData">
-        @Html.EditorFor(model => model.AddZip)
-        @Html.ValidationMessageFor(model => model.AddZip)
-    </td>
-</tr>
-<tr>
-    <td class="adminTitle">
-        @Html.SmartLabelFor(model => model.AddTaxCategoryId)
-    </td>
-    <td class="adminData">
-        @Html.DropDownListFor(model => model.AddTaxCategoryId, Model.AvailableTaxCategories)
-        @Html.ValidationMessageFor(model => model.AddTaxCategoryId)
-    </td>
-</tr>
-<tr>
-    <td class="adminTitle">
-        @Html.SmartLabelFor(model => model.AddPercentage)
-    </td>
-    <td class="adminData">
-        @Html.EditorFor(model => model.AddPercentage)
-        @Html.ValidationMessageFor(model => model.AddPercentage)
-    </td>
-</tr>
-<tr>
-    <td>&nbsp;</td>
-    <td style="padding:10px 0">
-        <button type="submit" name="addtaxrate" value="addtaxrate" class="btn btn-primary">@T("Plugins.Tax.CountryStateZip.AddRecord")</button>
-    </td>
-</tr>
-</table>
+    <div class="caption-container">
+        <h3 class="bordered">@T("Plugins.Tax.CountryStateZip.AddRecord.Hint")</h3>
+    </div>
+	
+	<table class="adminContent">
+	<tr>
+		<td class="adminTitle">
+			@Html.SmartLabelFor(model => model.AddCountryId)
+		</td>
+		<td class="adminData">
+			@Html.DropDownListFor(model => model.AddCountryId, Model.AvailableCountries)
+			@Html.ValidationMessageFor(model => model.AddCountryId)
+		</td>
+	</tr>
+	<tr>
+		<td class="adminTitle">
+			@Html.SmartLabelFor(model => model.AddStateProvinceId)
+		</td>
+		<td class="adminData">
+			@Html.DropDownListFor(model => model.AddStateProvinceId, Model.AvailableStates)
+			@Html.ValidationMessageFor(model => model.AddStateProvinceId)
+		</td>
+	</tr>
+	<tr>
+		<td class="adminTitle">
+			@Html.SmartLabelFor(model => model.AddZip)
+		</td>
+		<td class="adminData">
+			@Html.EditorFor(model => model.AddZip)
+			@Html.ValidationMessageFor(model => model.AddZip)
+		</td>
+	</tr>
+	<tr>
+		<td class="adminTitle">
+			@Html.SmartLabelFor(model => model.AddTaxCategoryId)
+		</td>
+		<td class="adminData">
+			@Html.DropDownListFor(model => model.AddTaxCategoryId, Model.AvailableTaxCategories)
+			@Html.ValidationMessageFor(model => model.AddTaxCategoryId)
+		</td>
+	</tr>
+	<tr>
+		<td class="adminTitle">
+			@Html.SmartLabelFor(model => model.AddPercentage)
+		</td>
+		<td class="adminData">
+			@Html.EditorFor(model => model.AddPercentage)
+			@Html.ValidationMessageFor(model => model.AddPercentage)
+		</td>
+	</tr>
+	<tr>
+		<td class="adminTitle">
+			&nbsp;
+		</td>
+		<td class="adminData">
+			<button type="submit" name="addtaxrate" value="addtaxrate" class="btn btn-primary">
+				<i class="icon-plus"></i>&nbsp;@T("Plugins.Tax.CountryStateZip.AddRecord")
+			</button>
+		</td>
+	</tr>
+	</table>
 }
