--- a/src/Plugins/Widgets.GoogleAnalytics/Views/WidgetsGoogleAnalytics/Configure.cshtml
+++ b/src/Plugins/Widgets.GoogleAnalytics/Views/WidgetsGoogleAnalytics/Configure.cshtml
@@ -62,8 +62,10 @@
 		</td>
 	</tr>
     <tr>
-        <td>&nbsp;</td>
-        <td style="padding:10px 0">
+		<td class="adminTitle">
+			&nbsp;
+		</td>
+		<td class="adminData">
             <button type="submit" name="save" value="save" class="btn btn-primary">
                 <i class="icon-ok"></i>&nbsp;@T("Admin.Common.Save")
             </button>
