--- a/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListLogs.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListLogs.cshtml
@@ -14,7 +14,9 @@
             @T("Admin.Configuration.ActivityLog.ActivityLog")
         </div>
         <div class="options">
-            <a href="@Url.Action("ClearAll")" class="btn btn-primary">@T("Admin.Common.Clear")</a>
+            <a href="@Url.Action("ClearAll")" class="btn btn-primary">
+				<i class="icon-repeat"></i>&nbsp;@T("Admin.Common.Clear")
+			</a>
         </div>
     </div>
     <p>
@@ -63,7 +65,8 @@
                 </button>
             </td>
         </tr>
-    </table>    
+    </table>
+	<p></p>
     <table class="adminContent">
         <tr>
             <td>
