--- a/src/Presentation/SmartStore.Web/Administration/Views/CheckoutAttribute/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/CheckoutAttribute/_CreateOrUpdate.cshtml
@@ -198,8 +198,13 @@
                 </tr>
                 <tr>
                     <td width="100%">
-                        <input type="submit" id="btnAddNewValue" name="btnAddNewValue" value="@T("Admin.Catalog.Attributes.CheckoutAttributes.Values.AddNew")" onclick="javascript:OpenWindow('@(Url.Action("ValueCreatePopup", "CheckoutAttribute", new { checkoutAttributeId = Model.Id, btnId = "btnRefresh", formId = "checkoutattribute-form" }))', 800, 300, true); return false;" class="t-button" />
+                        <button type="submit" id="btnAddNewValue" name="btnAddNewValue" class="btn btn-below"
+							onclick="javascript:OpenWindow('@(Url.Action("ValueCreatePopup", "CheckoutAttribute", new { checkoutAttributeId = Model.Id, btnId = "btnRefresh", formId = "checkoutattribute-form" }))', 800, 300, true); return false;">
+							<i class="icon-plus"></i>&nbsp;@T("Admin.Catalog.Attributes.CheckoutAttributes.Values.AddNew")
+						</button>
+
                         <input type="submit" id="btnRefresh" name="btnRefresh" style="display: none" />
+
                         <script type="text/javascript">
                             $(document).ready(function () {
                                 $('#btnRefresh').click(function () {
