--- a/src/Presentation/SmartStore.Web/Administration/Views/Common/SeNames.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Common/SeNames.cshtml
@@ -24,7 +24,16 @@
             </td>
             <td class="adminData">
                 @Html.EditorFor(model => Model.SeName)
-                <input type="button" id="btnSearch" class="btn btn-primary" value="@T("Admin.Common.Search")" />
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
+                &nbsp;
+            </td>
+            <td class="adminData">
+                <button type="button" id="btnSearch" class="btn">
+					<i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")
+				</button>
             </td>
         </tr>
     </table>
