--- a/src/Presentation/SmartStore.Web/Administration/Views/Country/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Country/Edit.cshtml
@@ -12,7 +12,7 @@
         <div class="options">
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
             <button type="submit" name="save" value="save-continue" class="btn">@T("Admin.Common.SaveContinue")</button>
-            <span id="country-delete" class="btn btn-danger"><i class="icon-remove icon-white"></i>&nbsp;@T("Admin.Common.Delete")</span>
+            <span id="country-delete" class="btn btn-danger"><i class="icon-trash icon-white"></i>&nbsp;@T("Admin.Common.Delete")</span>
         </div>
     </div>
     @Html.Partial("_CreateOrUpdate", Model)
