--- a/src/Presentation/SmartStore.Web/Administration/Views/Country/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Country/_CreateOrUpdate.cshtml
@@ -165,7 +165,10 @@
         </tr>
         <tr>
             <td width="100%">
-                <input type="submit" id="btnAddNewState" name="btnAddNewState" value="@T("Admin.Configuration.Countries.States.AddNew")" onclick="javascript:OpenWindow('@(Url.Action("StateCreatePopup", "Country", new { countryId = Model.Id, btnId = "btnRefresh", formId = "country-form" }))', 800, 250, true); return false;" class="t-button" />
+                <button type="submit" id="btnAddNewState" name="btnAddNewState" class="btn btn-below"
+					onclick="javascript:OpenWindow('@(Url.Action("StateCreatePopup", "Country", new { countryId = Model.Id, btnId = "btnRefresh", formId = "country-form" }))', 800, 250, true); return false;">
+					<i class="icon-plus"></i>&nbsp;@T("Admin.Configuration.Countries.States.AddNew")
+				</button>
                 <input type="submit" id="btnRefresh" name="btnRefresh" style="display: none" />
                 <script type="text/javascript">
                     $(document).ready(function () {
