--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/List.cshtml
@@ -15,11 +15,21 @@
             @T("Admin.Customers.Customers")
         </div>
         <div class="options">
-            <a href="@Url.Action("Create")" class="btn btn-primary"><i class="icon-plus"></i> @T("Admin.Common.AddNew")</a>
-            <a href="@Url.Action("ExportXmlAll")" class="btn">@T("Admin.Common.ExportToXml.All")</a>
-            <button type="submit" id="exportxml-selected" class="btn">@T("Admin.Common.ExportToXml.Selected")</button>
-            <a href="@Url.Action("ExportExcelAll")" class="btn">@T("Admin.Common.ExportToExcel.All")</a>
-            <button type="submit" id="exportexcel-selected" class="btn">@T("Admin.Common.ExportToExcel.Selected")</button>
+			<a href="@Url.Action("Create")" class="btn btn-primary">
+				<i class="icon-plus"></i> @T("Admin.Common.AddNew")
+			</a>
+			<div class="btn-group">
+				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+					Export
+					<span class="icon-caret-down"></span>
+				</a>
+				<ul class="dropdown-menu pull-right">
+					<li><a href="@Url.Action("ExportXmlAll")">@T("Admin.Common.ExportToXml.All")</a></li>
+					<li><a href="javascript:void(0)" id="exportxml-selected">@T("Admin.Common.ExportToXml.Selected")</a></li>
+					<li><a href="@Url.Action("ExportExcelAll")">@T("Admin.Common.ExportToExcel.All")</a></li>
+					<li><a href="javascript:void(0)" id="exportexcel-selected">@T("Admin.Common.ExportToExcel.Selected")</a></li>
+				</ul>
+			</div>
         </div>
     </div>
     <table width="100%">
