--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
@@ -143,7 +143,8 @@
                 @if (Model.Id > 0)
                 {
                     <button type="submit" name="changepassword" value="changepassword" class="btn">
-                        Change password</button>
+                        <i class="icon-pencil"></i>&nbsp;Change password
+					</button>
                 }
             </td>
         </tr>
@@ -514,11 +515,9 @@
     <div class="clear">
     </div>
     
-    <p>
-        <strong>
-            @T("Admin.Customers.Customers.RewardPoints.AddTitle")
-        </strong>
-    </p>
+    <div class="caption-container">
+        <h3 class="bordered">@T("Admin.Customers.Customers.RewardPoints.AddTitle")</h3>
+    </div>
     <table class="adminContent">
         <tr>
             <td class="adminTitle">
@@ -539,9 +538,13 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2" align="left">
+            <td class="adminTitle">
+                &nbsp;
+            </td>
+            <td class="adminData">
                 <button type="button" name="addRewardPoints" id="addRewardPoints" class="btn">
-                    @T("Admin.Customers.Customers.RewardPoints.AddButton")</button>
+                    <i class="icon-plus"></i>&nbsp;@T("Admin.Customers.Customers.RewardPoints.AddButton")
+				</button>
             </td>
         </tr>
     </table>
@@ -604,11 +607,10 @@
     }))
     <div class="clear">
     </div>
-    <p>
-        <strong>
-            <button type="button" class="btn" onclick="location.href='@Url.Action("AddressCreate", new { customerId = Model.Id })'"><i class="icon-plus"></i>&nbsp;@T("Admin.Customers.Customers.Addresses.AddButton")</button>
-        </strong>
-    </p>
+
+	<button type="button" class="btn btn-primary btn-below" onclick="location.href='@Url.Action("AddressCreate", new { customerId = Model.Id })'">
+		<i class="icon-plus"></i>&nbsp;@T("Admin.Customers.Customers.Addresses.AddButton")
+	</button>
 }
 @helper TabCurrentShoppingCart()
     {
@@ -673,12 +675,14 @@
     <table class="adminContent">
         <tr>
             <td>
-            @T("Admin.Customers.Customers.Impersonate.Description1")
-                <br />
-                @T("Admin.Customers.Customers.Impersonate.Description2")
-            <br /><br />
-            
-            <button type="submit" name="impersonate" value="impersonate" class="btn">@T("Admin.Customers.Customers.Impersonate.Button")</button>
+				@T("Admin.Customers.Customers.Impersonate.Description1")
+				<br />
+				@T("Admin.Customers.Customers.Impersonate.Description2")
+				<br /><br />
+
+				<button type="submit" name="impersonate" value="impersonate" class="btn">
+					<i class="icon-play-circle"></i>&nbsp;@T("Admin.Customers.Customers.Impersonate.Button")
+				</button>
             </td>
         </tr>
     </table>
