--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="options">
         <a href="@Url.Action("Create")" class="btn btn-primary"><i class="icon-plus icon-white"></i>&nbsp;@T("Admin.Common.AddNew")</a>
-        <a href="@Url.Action("ExportXml")" class="btn"><i class="icon-upload"></i>&nbsp;@T("Admin.Common.ExportToXml")</a>
+        <a href="@Url.Action("ExportXml")" class="btn"><i class="icon-download-alt"></i>&nbsp;@T("Admin.Common.ExportToXml")</a>
     </div>
 </div>
 <table width="100%">
