--- a/src/Presentation/SmartStore.Web/Administration/Views/NewsLetterSubscription/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/NewsLetterSubscription/List.cshtml
@@ -12,8 +12,12 @@
         @T("Admin.Promotions.newsLetterSubscriptions")
     </div>
     <div class="options">
-        <a href="@Url.Action("ExportCsv")" class="t-button">@T("Admin.Common.ExportToCsv")</a>
-        <a" href="#importcsv-window" data-toggle="modal" class="btn">@T("Admin.Common.ImportFromCsv")</a>
+        <a href="@Url.Action("ExportCsv")" class="btn">
+			<i class="icon-download-alt"></i>&nbsp;@T("Admin.Common.ExportToCsv")
+		</a>
+        <a href="#importcsv-window" data-toggle="modal" class="btn">
+			<i class="icon-upload"></i>&nbsp;@T("Admin.Common.ImportFromCsv")
+		</a>
     </div>
 </div>
 <table width="100%">
