--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrder.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrder.cshtml
@@ -53,14 +53,17 @@
         </td>
     </tr>
     <tr>
-        <td colspan="2">
-            <button type="submit" id="search-products" value="search-products" class="btn btn-above"><i class="icon-search icon-white">
-				</i>&nbsp;@T("Admin.Common.Search")
+		<td class="adminTitle">
+			&nbsp;
+		</td>
+		<td class="adminData">
+            <button type="submit" id="search-products" value="search-products" class="btn btn-above">
+				<i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")
 			</button>
         </td>
     </tr>
 </table>
-
+<p></p>
 <table class="adminContent">
     <tr>
         <td>
