--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentList.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentList.cshtml
@@ -19,8 +19,12 @@
         <div class="options">
             @if (Model.DisplayPdfPackagingSlip)
             {
-                <a href="@Url.Action("PdfPackagingSlipAll")" class="btn">@T("Admin.Orders.Shipments.PrintPackagingSlip.All")</a>
-                <button type="submit" id="exportpackagingslips-selected" class="btn">@T("Admin.Orders.Shipments.PrintPackagingSlip.Selected")</button>
+                <a href="@Url.Action("PdfPackagingSlipAll")" class="btn">
+					<i class="icon-print"></i>&nbsp;@T("Admin.Orders.Shipments.PrintPackagingSlip.All")
+				</a>
+                <button type="submit" id="exportpackagingslips-selected" class="btn">
+					<i class="icon-print"></i>&nbsp;@T("Admin.Orders.Shipments.PrintPackagingSlip.Selected")
+				</button>
             }
         </div>
     </div>
