--- a/src/Presentation/SmartStore.Web/Administration/Views/Poll/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Poll/List.cshtml
@@ -13,7 +13,7 @@
         @T("Admin.ContentManagement.Polls")
     </div>
     <div class="options">
-        <a href="@Url.Action("Create")" class="btn"><i class="icon-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
+        <a href="@Url.Action("Create")" class="btn btn-primary"><i class="icon-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
     </div>
 </div>
 <table class="adminContent">
