--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/Edit.cshtml
@@ -13,9 +13,6 @@
             @T("Admin.Catalog.Products.EditProductDetails") - @Model.Name @Html.ActionLink("(" + T("Admin.Catalog.Products.BackToList") + ")", "List")
         </div>
         <div class="options">
-            <!--
-            <input type="submit" value="@T("Admin.Common.Preview")" onclick="javascript:OpenWindow('@Url.RouteUrl("Product", new { productId = Model.Id, SeName = "" })', 800, 600, true); return false;" class="t-button" />
-            -->
             <button type="submit" name="preview" value="preview" onclick="javascript:OpenWindow('@Url.RouteUrl("Product", new { SeName = Model.SeName })', 800, 600, true); return false;" class="btn">
                 <i class="icon-eye-open"></i>
                 @T("Admin.Common.Preview")
@@ -27,7 +24,9 @@
             <button type="submit" value="save-continue" class="btn entity-commit-trigger" data-commit-type="product" data-commit-action="update" data-commit-id="@Model.Id">
                 @T("Admin.Common.SaveContinue")
             </button>
-            <a href="#copyproduct-window" data-toggle="modal" class="btn">@T("Admin.Catalog.Products.Copy")</a>
+            <a href="#copyproduct-window" data-toggle="modal" class="btn">
+				<i class="icon-copy"></i>&nbsp;@T("Admin.Catalog.Products.Copy")
+			</a>
             <button type="submit" id="product-delete" class="btn btn-danger">
                 <i class="icon-trash"></i>
                 @T("Admin.Common.Delete")
