--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Media.cshtml
@@ -12,7 +12,7 @@
             @T("Admin.Configuration.Settings.Media")
         </div>
         <div class="options">
-            <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-trash icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
+            <button type="submit" name="save" value="save" class="btn btn-primary"><i class="icon-ok icon-white"></i>&nbsp;@T("Admin.Common.Save")</button>
         </div>
     </div>
     
@@ -49,7 +49,9 @@
                     @T("Admin.Configuration.Settings.Media.PicturesStoredIntoDatabase.FileSystem")
                 }
                 
-            <button type="submit" name="change-picture-storage" value="change-picture-storage" class="t-button">@T("Admin.Configuration.Settings.Media.PicturesStoredIntoDatabase.Change")</button>
+            <button type="submit" name="change-picture-storage" value="change-picture-storage" class="btn">
+				<i class="icon-pencil"></i>&nbsp;@T("Admin.Configuration.Settings.Media.PicturesStoredIntoDatabase.Change")
+			</button>
             NOTE: Do not forget to backup your database before changing this option.
             </td>
         </tr>
