--- a/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
@@ -72,14 +72,13 @@
                             })
                             .Columns(columns =>
                             {
-                                columns.Bound(x => x.Name)
-                                    .Width(300);
+								columns.Bound(x => x.Name);
                                     //TODO display localized values here
                                 columns.Bound(x => x.DisplayOrder)
                                     .Width(100)
                                     .Centered();
                                 columns.Bound(x => x.Id)
-                                    .Width(50)
+                                    .Width(120)
                                     .Centered()
                                     .ClientTemplate("<input type='submit' value='" + @T("Admin.Common.Edit").Text + "' onclick=\"" + "javascript:OpenWindow('" + @Url.Content("~/Admin/SpecificationAttribute/OptionEditPopup/") + "<#= Id #>?btnId=btnRefresh&formId=specificationattribute-form', 800, 250, true); return false;\" class='btn' />")
                                     .Title(T("Admin.Common.Edit").Text);
@@ -87,7 +86,7 @@
                                 {
                                     commands.Delete().Localize(T);
                                 })
-                                .Width(50)
+                                .Width(100)
                                 .Title(T("Admin.Common.Delete").Text);
                             })
                             .DataBinding(dataBinding => 
@@ -98,7 +97,10 @@
                 </tr>
                 <tr>
                     <td width="100%">
-                        <input type="submit" id="btnAddNewOption" name="btnAddNewOption" value="@T("Admin.Catalog.Attributes.SpecificationAttributes.Options.AddNew")" onclick="javascript:OpenWindow('@(Url.Action("OptionCreatePopup", "SpecificationAttribute", new { specificationAttributeId = Model.Id, btnId = "btnRefresh", formId = "specificationattribute-form" }))', 800, 250, true); return false;" class="btn" />
+                        <button type="submit" id="btnAddNewOption" name="btnAddNewOption" class="btn btn-below"
+							   onclick="javascript:OpenWindow('@(Url.Action("OptionCreatePopup", "SpecificationAttribute", new { specificationAttributeId = Model.Id, btnId = "btnRefresh", formId = "specificationattribute-form" }))', 800, 250, true); return false;">
+							<i class="icon-plus"></i>&nbsp;@T("Admin.Catalog.Attributes.SpecificationAttributes.Options.AddNew")
+						</button>
                         <input type="submit" id="btnRefresh" name="btnRefresh" style="display: none" />
                         <script type="text/javascript">
                             $(document).ready(function () {
