Elimates scrollbars in FF & IE

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -304,7 +304,7 @@
     }
 </script>
 
-<div style="margin-bottom: 30px;">
+<div style="margin-bottom: 30px;overflow:hidden">
 	<table class="adminContent">
 		@if (Model.Id > 0)
 		{
