--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1112,8 +1112,13 @@ table.cart .cart-item-row .qty-input {
 .checkout-data .payment-method-item {
 	padding: 10px 20px;
 	border-bottom: 1px solid #ccc;
-	.payment-method-name { 
+
+	.payment-method-name {
 		.text-overflow();
+	}
+
+	.payment-method-desc {
+		display: inline-block;
 	}
 }
 .shipping-option-item.odd,
