--- a/src/Presentation/SmartStore.Web/Views/Checkout/PaymentMethod.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/PaymentMethod.Mobile.cshtml
@@ -40,7 +40,15 @@
                             <div class="payment-method-item">
                                 <div class="option-name">
                                     <input id="paymentmethod_@(i)" type="radio" name="paymentmethod" value="@(paymentMethod.PaymentMethodSystemName)" checked="@paymentMethod.Selected" />
-                                    <label for="paymentmethod_@(i)">@paymentMethodName</label>
+                                    <label for="paymentmethod_@(i)">
+										@paymentMethodName
+									</label>
+									@if (!String.IsNullOrWhiteSpace(paymentMethod.Description))
+									{
+										<div class="payment-method-desc">
+											@Html.Raw(paymentMethod.Description)
+										</div>
+									}
                                 </div>
                             </div>
                         }
