--- a/src/Presentation/SmartStore.Web/Views/Checkout/PaymentMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/PaymentMethod.cshtml
@@ -87,6 +87,12 @@
                                         <input id="paymentmethod_@(i)" type="radio" name="paymentmethod" value="@(paymentMethod.PaymentMethodSystemName)" checked="@paymentMethod.Selected" />
                                         <span class="payment-method-name">@paymentMethod.Name</span>
                                     </label>
+									@if (!String.IsNullOrWhiteSpace(paymentMethod.Description))
+									{
+										<div class="payment-method-desc">
+											@Html.Raw(paymentMethod.Description)
+										</div>
+									}
                                 </div>
                             </div>
                         }
