Minor code optimization

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrder.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrder.cshtml
@@ -81,7 +81,7 @@
                     .Selectable()
                     .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
 					.DataBinding(dataBinding => dataBinding.Ajax().Select("AddProductToOrder", "Order"))
-                    .ClientEvents(events => events.OnDataBinding("onDataBinding").OnRowSelected("onRowSelected"))
+                    .ClientEvents(events => events.OnDataBinding("onDataBinding").OnRowSelect("onRowSelected"))
                     .EnableCustomBinding(true))
         </td>
     </tr>
