--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/_CreateOrUpdatePlugin.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/_CreateOrUpdatePlugin.cshtml
@@ -8,7 +8,7 @@
 @if (ViewBag.RefreshPage == true)
 {
     <script type="text/javascript">
-        try {window.opener.document.forms['@(ViewBag.formId)'].@(ViewBag.btnId).click();}
+        try {window.opener.document.forms['@(ViewBag.formId)']['@(ViewBag.btnId)'].click();}
         catch (e){} 
         window.close();
     </script>
