Extended sample data: New category "Gaming" contains two product bundles, a grouped product, a product linked through an attribute value and others.

--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
@@ -81,7 +81,7 @@
 
                     @if (Model.ShowDeliveryTimes)
                     {
-                        if (Model.DeliveryTimeName.HasValue() && Model.IsShipEnabled)
+                        if ((!String.IsNullOrEmpty(Model.DeliveryTimeName) && !String.IsNullOrEmpty(Model.DeliveryTimeHexValue)) && Model.IsShipEnabled)
                         {
                             <tr class="delivery-time">
                                 <td class="attr-label">
