#219 Show entity creation and update date in backend

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -625,6 +625,28 @@
 				@Html.ValidationMessageFor(model => model.Published)
 			</td>
 		</tr>
+		@if(Model.CreatedOn.HasValue)
+		{
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.CreatedOn)
+				</td>
+				<td class="adminData">
+					@Html.DisplayFor(model => model.CreatedOn)
+				</td>
+			</tr>
+		}
+		@if(Model.UpdatedOn.HasValue)
+		{
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.UpdatedOn)
+				</td>
+				<td class="adminData">
+					@Html.DisplayFor(model => model.UpdatedOn)
+				</td>
+			</tr>
+		}
 	</table>
 
 	<table class="adminContent" id="group-required-other-products">
