Setting to hide buy button in product lists

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -387,7 +387,15 @@
                     @Html.ValidationMessageFor(model => model.ShowColorSquaresInLists)
                 </td>
             </tr>
-
+            <tr>
+                <td class="adminTitle">
+                    @Html.SmartLabelFor(model => model.HideBuyButtonInLists)
+                </td>
+                <td class="adminData">
+                    @Html.SettingEditorFor(model => model.HideBuyButtonInLists)
+                    @Html.ValidationMessageFor(model => model.HideBuyButtonInLists)
+                </td>
+            </tr>
             <tr>
                 <td class="adminTitle">
                     @Html.SmartLabelFor(model => model.LabelAsNewForMaxDays)
