--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductBoxList.cshtml
@@ -241,7 +241,7 @@
                     <i class="icon-info-sign"></i>
                 </a>
                  
-                @if (!Model.ProductPrice.DisableBuyButton)
+                @if (!Model.ProductPrice.DisableBuyButton && !Model.HideBuyButtonInLists)
                 {
                     <a data-href='@addtocartlink'
                         href="#"
