Clearing cache stays on current page. TODO: Add string resources

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
@@ -62,7 +62,7 @@
 						<li class="divider"></li>
 					}
                     <li>
-                        <a href="@Url.Action("ClearCache", "Common")">
+                        <a href="@Url.Action("ClearCache", "Common", new { previousUrl = Request.RawUrl })">
                             <i class="icon-remove"></i>
                             @T("Admin.Header.ClearCache")
                         </a>
