Adjusted TinyMCE UI

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.cshtml
@@ -1,8 +1,8 @@
 ﻿@model String
 @using SmartStore.Web.Framework.UI;
 @{
-    Html.AddScriptParts(true,
-        "~/Content/editors/tinymce4/tinymce.gzip.js" ,"~/Content/editors/tinymce4/globalinit.js");
+    Html.AddScriptParts(true, "~/Content/editors/tinymce4/tinymce.gzip.js" ,"~/Content/editors/tinymce4/globalinit.js");
+	Html.AppendCssFileParts(ResourceLocation.Foot, true, "~/Content/editors/tinymce4/skins/smartstore/skin.smartstore.css");
 
     var availableLangs = new string[] { "de", "en" };
     var lang = WorkContext.WorkingLanguage.UniqueSeoCode.ToLower();
@@ -22,7 +22,8 @@
                 tiny_mce_global_config,
                 {
     				selector: '#@ViewData.TemplateInfo.GetFullHtmlFieldId(string.Empty)',
-    				language: '@lang',
+                	language: '@lang',
+                	content_css: '@Url.Content("~/Content/editors/tinymce4/skins/smartstore/content.smartstore.css")',
                 }
             )
         );
