--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
@@ -83,8 +83,8 @@
                     <i class="icon-question-sign"></i>
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a href="#">@T("Admin.Help.Topics")</a></li>
-                    <li><a href="#">@T("Admin.Help.Forums")</a></li>
+                    @*<li><a href="#">@T("Admin.Help.Topics")</a></li>*@
+                    <li><a href="http://community.smartstore.com/index.php?/&k=880ea6a14ea49e853634fbdc5015a024&setlanguage=1&cal_id=&langid=1">@T("Admin.Help.Forums")</a></li>
                 </ul>
             </div>
            
