Added about SmartStore.NET page

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -532,12 +532,35 @@ a:hover {
     }
 }
 
+/* ABOUT PAGE */
+.about-page {
+	font-size: 1.2em;
+	line-height: normal;
+	max-width: 1000px;
+	text-align: center;
+
+	.work-list {
+		list-style-type: none;
+		padding: 0;
+		margin: 20px 0 0 0;
+
+		li {
+			line-height: normal;
+			margin: 10px 0 15px 0;
+
+			.name, .name a:hover {
+				font-weight: bold;
+			}
+		}
+	}
+}
+
 .popup .section-header.sticky {
 	top: 0;
 	.options { right: 15px }
 }
 
-/* multi-store */
+/* MULTI-STORE */
 *.multi-store-scope {
     label.checkbox {
         margin: 4px 0 1px 3px;
