--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -353,6 +353,10 @@ input[type="color"],
 	vertical-align: -1px;
 }
 
+.dropdown-menu li a i {
+	display: inline-block;
+	min-width: 16px;
+}
 
 // LABEL-BADGE ENHANCEMENTS
 // -------------------------
