--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -534,10 +534,8 @@ a:hover {
 
 /* ABOUT PAGE */
 .about-page {
-	font-size: 1.2em;
-	line-height: normal;
 	max-width: 1000px;
-	text-align: center;
+	//text-align: center;
 
 	.work-list {
 		list-style-type: none;
