--- a/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
@@ -13,7 +13,7 @@
 <div class="about-page">
 
 	<p>
-		SmartStore.NET<br />
+		Version @SmartStore.Core.SmartStoreVersion.CurrentFullVersion<br />
 		Copyright &copy; 1999-2014 SmartStore AG<br />
 		<a href="http://www.smartstore.com/" target="AboutTargetWin">www.smartstore.com</a>,
 		<a href="http://smartstore.codeplex.com/" target="AboutTargetWin">smartstore.codeplex.com</a>
@@ -23,7 +23,7 @@
 		@Html.Raw(T("Admin.Help.NopCommerceNote", "<a href=\"http://www.nopcommerce.com/\" rel=\"nofollow\" target=\"AboutTargetWin\">nopCommerce</a>"))
 	</p>
 
-	<p>
+	<p style="margin-top: 32px;">
 		@Html.Raw(T("Admin.Help.OtherWorkNote"))
 	</p>
 
