--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
@@ -9,8 +9,8 @@
 	var stores = EngineContext.Current.Resolve<IStoreService>().GetAllStores();
 	string currentLanguageCode = currentLanguage.UniqueSeoCode.EmptyNull().ToLower();
 	string communityUrl = (currentLanguageCode == "de" ? 
-		"http://community.smartstore.com/index.php?/forum/79-smartstorenet-deutsch/" :
-		"http://community.smartstore.com/index.php?/forum/85-smartstorenet-english/");
+		"http://community.smartstore.com" :
+		"http://community.smartstore.com/index.php?/&k=880ea6a14ea49e853634fbdc5015a024&setlanguage=1&cal_id=&langid=1");
 }
 
 <div id="navbar" class="navbar navbar-inverse navbar-fixed-top">
@@ -99,13 +99,13 @@
                 </button>
                 <ul class="dropdown-menu">
                     @*<li>
-						<a href="https://smartstore.zendesk.com/forums/22347533-Tipps-und-Tricks" hreflang="de">
+						<a href="https://smartstore.zendesk.com/forums/22347533-Tipps-und-Tricks" data-lang="@currentLanguageCode">
 							<i class="icon-file"></i>
 							@T("Admin.Help.Topics")
 						</a>
 					</li>*@
                     <li>
-						<a href="@communityUrl" hreflang="@currentLanguageCode">
+						<a href="@communityUrl" data-lang="@currentLanguageCode" target="help">
 							<i class="icon-comment"></i>
 							@T("Admin.Help.Forums")
 						</a>
