--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -129,7 +129,7 @@
                         });
                     </script>
                     
-                    <a class="btn pull-left" href="@Url.RouteUrl("CheckoutPaymentInfo")">
+                    <a class="btn pull-left" href="@Url.RouteUrl(Model.BypassPaymentMethodInfo ? "CheckoutPaymentMethod" : "CheckoutPaymentInfo")">
                         <i class="icon-caret-left"></i>&nbsp;
                         @T("Common.Back")
                     </a>
